fix: stack game mode buttons on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,12 +311,12 @@ footer p {
 
     /* INSTRUCTIONS */
 
-    #game-mode-instructions {
+    #game-modes-wrapper {
         flex-direction: column;
         align-items: center;
     }
 
-    .game-mode-description {
+    .game-mode {
         width: 80%;
         margin: 15px 0;
     }
